2014-04-08 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Could remove some of the exclusion rules after the recent
	  bugfixes in rootcling, but not all of them.
	* With the latest version of the ROOT master branch, the
	  class names are now recognised correctly by rootcling.
	* Tagging as xAODTrigL1Calo-00-00-07

2014-04-05 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Changed the name of GCCXML_DUMMY_INSTANTIATION to
	  a more unique name in the dictionary header. Was necessary,
	  as rootcling is complaining about seeing the same struct name
	  in multiple libraries. (Which really shouldn't clash actually,
	  but let's do this until ROOT 6 stops complaining about this.)
	* Still not tagging, as the DataVector selection rule is still
	  not applied correctly.

2014-04-05 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Tried making rootcling take the DataVector selection rules
	  into account, but for some reason I didn't manage. To be
	  followed up with the ROOT developers...
	* Not tagging for the moment.

2014-01-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding some explicit includes to the headers making
	  use of uint32_t. Interestingly the absence of these includes
	  only causes build failures on some platforms/setups.
	* Tagging as xAODTrigL1Calo-00-00-06

2014-01-24 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Migrated the package to use RootCore for the standalone
	  compilation.
	* Not runtime tests done, but things should be okay in principle
	  after the update.
	* Tagging as xAODTrigL1Calo-00-00-05

2013-12-19 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-04
	* Run1 EDM pretty much complete

2013-12-17 John Morris <john.morris@cern.ch>
	* Tag as xAODTrigL1Calo-00-00-03
	* CMMRoI guid in selection.xml

2013-12-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Set the "Id Revision Date" keywords on all the source files.