@@ -3,11 +3,12 @@
 
 // Local include(s):
 #include "xAODTrigL1Calo/versions/TriggerTower_v1.h"
+#include "xAODTrigL1Calo/versions/TriggerTower_v2.h"
 
 /// Namespace holding all the xAOD EDM classes
 namespace xAOD {
    /// Define the latest version of the TriggerTower class
-   typedef TriggerTower_v1 TriggerTower;
+   typedef TriggerTower_v2 TriggerTower;
 }
 
 #endif // XAODTRIGL1CALO_TRIGGERTOWER_H
