@@ -3,10 +3,11 @@
 
 // Local include(s):
 #include "xAODTrigL1Calo/versions/TriggerTowerAuxContainer_v1.h"
+#include "xAODTrigL1Calo/versions/TriggerTowerAuxContainer_v2.h"
 
 namespace xAOD {
    /// Define the latest version of the TriggerTower auxiliary container
-   typedef TriggerTowerAuxContainer_v1 TriggerTowerAuxContainer;
+   typedef TriggerTowerAuxContainer_v2 TriggerTowerAuxContainer;
 }
 
 #endif // XAODTRIGL1CALO_TRIGGERTOWERAUXCONTAINER_H
