@@ -4,10 +4,11 @@
 // Local include(s):
 #include "xAODTrigL1Calo/TriggerTower.h"
 #include "xAODTrigL1Calo/versions/TriggerTowerContainer_v1.h"
+#include "xAODTrigL1Calo/versions/TriggerTowerContainer_v2.h"
 
 namespace xAOD {
    /// Define the latest version of the TriggerTower container
-   typedef TriggerTowerContainer_v1 TriggerTowerContainer;
+   typedef TriggerTowerContainer_v2 TriggerTowerContainer;
 }
 
 #endif // XAODTRIGL1CALO_TRIGGERTOWERCONTAINER_H
